First version of song folder manager and update some translations

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informació
 MSG_QUESTION_TITLE=Qüestió
 MSG_QUIT_USWP=Realment vols sortir d'UltraStar?
 MSG_END_PARTY=Realment vols sortir del mode festa?
+MSG_END_SONGDIRS=Sortir sense guardar?
 
 ERROR_NO_SONGS=No hi ha cançons
 ERROR_NO_PLUGINS=No hi ha Plugins
@@ -698,7 +699,7 @@ C_JOKER=Joker
 C_JUKEBOX=Reproductor de música
 
 C_LEGEND=Llegenda
-C_LINE=Línea
+C_LINE=Línia
 C_LYRICS=LLetres
 
 C_MEDLEY=Barreja
@@ -733,7 +734,8 @@ C_SEND=Enviar
 C_SING=Canta
 C_SING_MEDLEY=Canta la barreja
 C_SONG=Cançó
-C_SONGS=Cançóns
+C_SONGDIRS=Carpetes
+C_SONGS=Cançons
 C_SORT=Ordenar
 C_SORT_SONGS=Ordena les cançons
 C_SOUND=So
@@ -751,3 +753,6 @@ C_VIDEO=Vídeo
 C_WEBCAM=Càmera web
 
 C_YES=Si
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
