--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Fejl
 MSG_QUESTION_TITLE=Spørgsmål
 MSG_QUIT_USWP=Vil du virkelig forlade UltraStar?
 MSG_END_PARTY=Vil du virkelig forlade fest Modus?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ingen Sange hentet
 ERROR_NO_PLUGINS=Igen Plugins hentet
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke hentes.
 ;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones\n\n Please check your microphone options
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone\n\n Please check your microphone options
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Advanceret
@@ -731,6 +734,7 @@ C_MICROPHONES=Optag
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
