--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Frage
 MSG_QUIT_USWP=UltraStar WorldParty wirklich beenden?
 MSG_END_PARTY=Party-Modus wirklich beenden?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Keine Songs vorhanden.
 ERROR_NO_PLUGINS=Keine Plugins vorhanden.
@@ -733,6 +734,7 @@ C_SEND=Senden
 C_SING=Singen
 C_SING_MEDLEY=Medley singen
 C_SONG=Lied
+;TODO: C_SONGDIRS=Folders
 C_SONGS=Lieder
 C_SORT=Sortieren
 C_SORT_SONGS=Lieder sortieren
