--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -1,4 +1,4 @@
-[Text]
+﻿[Text]
 LANGUAGE=Eesti keel
 LANGUAGE_ISO_CODE=et
 
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informatsioon
 MSG_QUESTION_TITLE=Küsimus
 MSG_QUIT_USWP=Lõplikult väljuda UltraStarist?
 MSG_END_PARTY=Lõplikult väljuda peoversioonist?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Pole laule üles laetud
 ERROR_NO_PLUGINS=Pole pluginaid üles laetud
@@ -733,6 +734,7 @@ C_SEND=Saada
 C_SING=Laula
 C_SING_MEDLEY=Laula popuriid
 C_SONG=Laul
+;TODO: C_SONGDIRS=Folders
 C_SONGS=Laulud
 C_SORT=Sorteeri
 C_SORT_SONGS=Sorteeri laule
