--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Question
 MSG_QUIT_USWP=Really leave UltraStar?
 MSG_END_PARTY=Really leave party mode?
+MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=No songs loaded
 ERROR_NO_PLUGINS=No plugins loaded
@@ -703,7 +704,7 @@ C_LYRICS=Lyrics
 
 C_MEDLEY=Medley
 C_MEDLEYC=Medley calculated
-C_MICROPHONE= Microphone
+C_MICROPHONE=Microphone
 C_MICROPHONES=Microphones
 C_MODE=Mode
 
@@ -733,6 +734,7 @@ C_SEND=Send
 C_SING=Sing
 C_SING_MEDLEY=Sing medley
 C_SONG=Song
+C_SONGDIRS=Folders
 C_SONGS=Songs
 C_SORT=Sort
 C_SORT_SONGS=Sort songs
