--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -1,4 +1,4 @@
-[Text]
+﻿[Text]
 LANGUAGE=Español
 LANGUAGE_ISO_CODE=es
 
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
 MSG_QUIT_USWP=¿Seguro que quieres salir?
 MSG_END_PARTY=¿Seguro que quieres salir del modo fiesta?
+MSG_END_SONGDIRS=¿Salir sin guardar cambios?
 
 ERROR_NO_SONGS=No hay canciones
 ERROR_NO_PLUGINS=No hay plugins
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposible cargar la canción: Error durante e
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Se han asignado más de 1 micrófono al jugador %d\n\n Comprueba las opciones de micrófonos
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Al jugador %d no se le ha asignado ningún micrófono\n\n Comprueba las opciones de micrófonos
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 C_ABOUT=Acerca de...
 C_ADVANCED=Avanzado
@@ -731,6 +734,7 @@ C_SEND=Enviar
 C_SING=Cantar
 C_SING_MEDLEY=Cantar versión corta
 C_SONG=Canción
+C_SONGDIRS=Carpetas
 C_SONGS=Canciones
 C_SORT=Ordenar
 C_SORT_SONGS=Ordenar canciones
