--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informazioa
 MSG_QUESTION_TITLE=Galdera
 MSG_QUIT_USWP=Ziur zaude irten nahi duzula?
 MSG_END_PARTY=Ziur zaude talde jokoa bukatu nahi duzula?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ez dago abestirik
 ERROR_NO_PLUGINS=Ez dago pluginik
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ezin da abestia kargatu: Okerra %0:d lerroan
 ERROR_PLAYER_DEVICE_ASSIGNMENT= %d.jokalariak mikrofono bat baino gehiago aukeratuta ditu\n\n Egiaztatu mikrofonoaren aukerak
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphones\n\n Egiaztatu mikrofonoaren aukerak
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Aurreratuak
@@ -731,6 +734,7 @@ C_MICROPHONES=Grabazioa
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
