--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -206,7 +206,7 @@ OPTION_VALUE_PLAYER=Joueur
 SING_OPTIONS_NETWORK_WEBSITE=Site Internet
 SING_OPTIONS_NETWORK_USERNAME=Utilisateur
 SING_OPTIONS_NETWORK_PASSWORD=Mot de passe
-SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Sauvergarder le nom
+SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Sauvegarder le nom
 SING_OPTIONS_NETWORK_AUTO_MODE=Automatique
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Joueur
 SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Envoi automatique (Facile)
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Confirmation
 MSG_QUIT_USWP=Quitter le jeu ?
 MSG_END_PARTY=Quitter la fête ?
+MSG_END_SONGDIRS=Quitter sans sauvegarder?
 
 ERROR_NO_SONGS=Chansons introuvables
 ERROR_NO_PLUGINS=Plugins introuvables
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Chargement impossible : Erreur analyseur à l
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Plusieurs micros sont attribués au joueur %d\n\n Merci de vérifier vos options de microphone
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d\n\n Merci de vérifier vos options de microphone
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 C_ABOUT=À propos de...
 C_ADVANCED=Avancé
@@ -731,6 +734,7 @@ C_SEND=Envoyer
 C_SING=Chanter
 C_SING_MEDLEY=Chanter version courte
 C_SONG=Chanson
+C_SONGDIRS=Dossiers
 C_SONGS=Chansons
 C_SORT=Trier
 C_SORT_SONGS=Trier les chansons
