--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
 MSG_QUIT_USWP=Seguro que queres saír?
 MSG_END_PARTY=Seguro que queres saír do modo festa?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Non hai cancións
 ERROR_NO_PLUGINS=Non hai plugins
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposible cargar a canción: Erro durante o p
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Asignaronse máis dun micrófono ó xogador %d\n\n Comproba as opcións de micrófonos.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Ó xogador %d non se lle asignou ningún micrófono\n\n Comproba as opcións de micrófonos.ç
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avanzado
@@ -731,6 +734,7 @@ C_MICROPHONES=Micrófonos
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
