--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Fiosrachadh
 MSG_QUESTION_TITLE=Ceist
 MSG_QUIT_USWP=A bheil thu airson UltraStar fhàgail?
 MSG_END_PARTY=A bheil thu airson am modh cèilidh fhàgail?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Cha deach òran a luchdadh
 ERROR_NO_PLUGINS=Cha deach plugan a luchdadh
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Cha b’ urrainn dhuinn an t-òran a luchdadh
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Chaidh iomadh micreofon a shònrachadh dha chluicheadair %d\n\n Thoir sùil air na roghainnean microfòn agad
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluicheadair %d\n\n Thoir sùil air na roghainnean microfòn agad
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Adhartach
@@ -731,6 +734,7 @@ C_MICROPHONES=Clàradh
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
