--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Greška
 MSG_QUESTION_TITLE=Pitanje
 MSG_QUIT_USWP=Napustiti UltraStar?
 MSG_END_PARTY=Napustiti Party igru?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nema učitanih pjesama
 ERROR_NO_PLUGINS=Nema učitanih pluginova
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Pjesma se ne može učitati: Greška u obradi
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Igrač %d je dodijeljen više mikrofona\n\n Provjerite opcije mikrofona
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu\n\n Provjerite opcije mikrofona
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Ostalo
@@ -731,6 +734,7 @@ C_MICROPHONES=Snimanje
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
