--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informazione
 MSG_QUESTION_TITLE=Domanda
 MSG_QUIT_USWP=Vuoi davvero uscire da UltraStar?
 MSG_END_PARTY=Vuoi davvero terminare la Modalità Party?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nessuna Canzone caricata!
 ERROR_NO_PLUGINS=Nessun Plugin caricato!
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Impossibile aprire la canzone: errore durante
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Il giocatore %d è assegnato a più microfoni\n\n Per favore, selezionare un canale libero!
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfono\n\n Per favore, selezionare un canale nelle opzioni del microfono
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avanzate
@@ -731,6 +734,7 @@ C_SEARCH_NEW_SONGS=Cerca nuove canzoni
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
