--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_QUESTION_TITLE=Question
 ;TODO: MSG_QUIT_USWP=Really leave UltraStar?
 ;TODO: MSG_END_PARTY=Really leave party mode?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ;TODO: ERROR_NO_SONGS=No songs loaded
 ;TODO: ERROR_NO_PLUGINS=No plugins loaded
@@ -628,7 +629,9 @@ ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones\n\n Please check your microphone options
 ;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone\n\n Please check your microphone options
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Išplėstinė
@@ -731,6 +734,7 @@ C_MICROPHONES=Įrašyti
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
