--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informatioun
 MSG_QUESTION_TITLE=Bestätegung
 MSG_QUIT_USWP=UltraStar wierklech verloossen?
 MSG_END_PARTY=Party wierklech verloossen?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Keng Lidder fonnt
 ERROR_NO_PLUGINS=Kee Plugin fonnt
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Lidd gëtt net gelueden: Feeler beim Parze vu
 ERROR_PLAYER_DEVICE_ASSIGNMENT=De Spiller %d huet ze vill Mikroe gewielt\n\n Iwwerpréift d'Opzeechnungsoptiounen.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=De Spiller %d huet kee Mikro gewielt\n\n Iwwerpréift d'Opzeechnungsoptiounen.
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Erweidert
@@ -731,6 +734,7 @@ C_MICROPHONES=Mikro
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
