--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Infó
 MSG_QUESTION_TITLE=Kérdés
 MSG_QUIT_USWP=Biztos elhagyod az UltraStar színpadát?
 MSG_END_PARTY=Biztos kilépsz a Buli módból?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nincs dal betöltve
 ERROR_NO_PLUGINS=Nincs plugin betöltve
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Sikertelen dalbetöltés: Sikertelen elemzés
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Játékos %d több mikrofonhoz van rendelve\n\n Kérlek ellenőrizd a mikrofon beállításokat.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Játékos %d nincs egy mikrofonhoz sem rendelve\n\n Kérlek ellenőrizd a mikrofon beállításokat.
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Haladó
@@ -731,6 +734,7 @@ C_LYRICS=Dalszöveg
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
