--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Error
 MSG_QUESTION_TITLE=Vraag
 MSG_QUIT_USWP=Uit met de pret?
 MSG_END_PARTY=Stoppen met de Party?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Geen liedjes geladen
 ERROR_NO_PLUGINS=Geen plugins geladen
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Liedje kon niet geladen worden: Probleem met 
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Speler %d is toegewezen aan meerdere microfoons\n\n Controleer uw microfoonopties
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Speler %d is niet toegewezen aan een microfoon\n\n Controleer uw microfoonopties
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 ;TODO: C_ADVANCED=Geavanceerd
@@ -731,6 +734,7 @@ C_OPTIONS=Spelopties
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
