--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Feil
 MSG_QUESTION_TITLE=Spørsmål
 MSG_QUIT_USWP=Vil du virkelig avslutte UltraStar?
 MSG_END_PARTY=Vil du virkelig forlate party-modusen?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ingen sanger lastet
 ERROR_NO_PLUGINS=Ingen plug-ins lastet
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke lastes
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Spiller %d er tilordnet flere mikrofoner\n\n Vennligst sjekk mikrofonene dine
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spiller %d er ikke tilordnet en mikrofon\n\n Vennligst sjekk mikrofonene dine
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avansert
@@ -731,6 +734,7 @@ C_MICROPHONES=Opptak
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
