--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informacja
 MSG_QUESTION_TITLE=Pytanie
 MSG_QUIT_USWP=Czy na prawdę chcesz opuścić UltraStar?
 MSG_END_PARTY=Na pewno chcesz zakończyć tryb imprezy?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Brak piosenek
 ERROR_NO_PLUGINS=Brak wtyczek
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Piosenka nie może być załadowana: Błąd r
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Gracz %d został przypisany do wielu mikrofonów\n\n Sprawdź ustawienia mikrofonów.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu\n\n Sprawdź ustawienia mikrofonów.
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 ;TODO: C_ADVANCED=Zaawansow
@@ -731,6 +734,7 @@ C_MICROPHONES=Nagrywanie
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
