--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informação
 MSG_QUESTION_TITLE=Questão
 MSG_QUIT_USWP=Deseja mesmo sair do UltraStar?
 MSG_END_PARTY=Deseja mesmo terminar o Modo Festa?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nenhuma Canção lida
 ERROR_NO_PLUGINS=Nenhum Plugin lido
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Erro durante o parsing da linha %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones\n\n Por favor verifique as opções de microfone!
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone\n\n Por favor verifique as opções de microfone!
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avançado
@@ -731,6 +734,7 @@ C_OPTIONS=Opções
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
