--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informaţii
 MSG_QUESTION_TITLE=Întrebare
 MSG_QUIT_USWP=Chiar ieşi?
 MSG_END_PARTY=Chiar ieşi din modul party?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nu există cântece
 ERROR_NO_PLUGINS=Nu există plugin-uri
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposibil de încărcat cântecul: Eroare în
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Jucătorului %d i s-au atribuit mai multe microfoane\n\n Verifică opţiunile de microfon.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jucătorului %d nu i s-a atribuit nici un microfon\n\n Verifică opţiunile de microfon.
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avansat
@@ -731,6 +734,7 @@ C_OPTIONS=Opţiuni
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
