--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informácia
 MSG_QUESTION_TITLE=Otázka
 MSG_QUIT_USWP=Skutočne chcete ukončiť UltraStar?
 MSG_END_PARTY=Skutočne chcete ukončiť párty mód?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Žiadna skladba
 ERROR_NO_PLUGINS=Žiaden zásuvný modul
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Skladbu sa nepodarilo nahrať: Chyba spracova
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d má priradených viac mikrofónov\n\n Skontrolujte nastavenia mikrofónu
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d nemá priradený mikrofón\n\n Skontrolujte nastavenia mikrofónu
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 C_ABOUT=O programe...
 C_ADVANCED=Pokročilé
@@ -731,6 +734,7 @@ C_SEND=Odoslať
 C_SING=Spievať
 C_SING_MEDLEY=Spievať všehochuť
 C_SONG=Skladba
+;TODO: C_SONGDIRS=Folders
 C_SONGS=Skladby
 C_SORT=Triediť
 C_SORT_SONGS=Triediť skladby
