--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Napaka
 MSG_QUESTION_TITLE=Vprašanje
 MSG_QUIT_USWP=Želite zapustiti Ultrastar?
 MSG_END_PARTY=Koncam zabavo?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ni pesmi: Naloži jih v mapo Songs
 ERROR_NO_PLUGINS=Ni vkljuckov
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ne morem naložiti pesmi: Napaka v parsanju v
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Igralec %d je dodeljena več mikrofonom\n\n Preverite možnosti mikrofona
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igralec %d ni dodeljen mikrofonu\n\n Preverite možnosti mikrofona
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Napredno
@@ -661,7 +664,7 @@ C_COLOR_ORANGE=Oranžna
 ;TODO: C_COLOR_OTHER=Other
 C_COLOR_PINK=Roza
 ;TODO: C_COLOR_PLUM=Plum
-;C_COLOR_RED=Rdeča
+C_COLOR_RED=Rdeča
 ;TODO: C_COLOR_SALMON=Salmon
 ;TODO: C_COLOR_SKY=Sky
 ;TODO: C_COLOR_STEELBLUE=Steel blue
@@ -731,6 +734,7 @@ C_MICROPHONES=Mikrofoni
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
