--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Informaatio
 MSG_QUESTION_TITLE=Kysymys
 MSG_QUIT_USWP=Tahdotko todella sulkea UltraStarin?
 MSG_END_PARTY=Tahdotko todella sulkea Tiimilaulun?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ei kappaleita
 ERROR_NO_PLUGINS=Ei lisäkkeitä ladattu
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Kappaletta ei voitu avata: Virhe jäsentäess
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Pelaaja %d is assigned to multiple microphones\n\n Tarkista mikrofoniasetukset
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Pelaaja %d is not assigned to a microphones\n\n Tarkista mikrofoniasetukset
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Erikoiset
@@ -731,6 +734,7 @@ C_MICROPHONES=Mikrofonit
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
