--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Fel
 MSG_QUESTION_TITLE=Fråga
 MSG_QUIT_USWP=Vill du verkligen avsluta UltraStar?
 MSG_END_PARTY=Vill du verkligen avsluta partyläge?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Inga låtar laddade
 ERROR_NO_PLUGINS=Inga insticksprogram laddade
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Låten kunde inte laddas: Fel på rad %0:d
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Spelare %d är tilldelad flera mikrofoner\n\n Kontrollera dina mikrofonalternativ
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spelare %d är inte tilldelad en mikrofon\n\n Kontrollera dina mikrofonalternativ
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Avancerat
@@ -731,6 +734,7 @@ C_MICROPHONES=Inspelning
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
