--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=Info
 MSG_QUESTION_TITLE=Potvrzení
 MSG_QUIT_USWP=Opravdu ukončit UltraStar?
 MSG_END_PARTY=Opravdu ukončit párty mód?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Žádné skladby nenačteny
 ERROR_NO_PLUGINS=Žádné doplňky nenačteny
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Skladbu se nepodařilo načíst: Chyba při z
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d je přiřazen k vícero mikrofonům\n\n Zkontrolujte možnosti mikrofonu
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d není přiřazen k mikrofonu\n\n Zkontrolujte možnosti mikrofonu
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Pokročilé
@@ -731,6 +734,7 @@ C_MICROPHONES=Mikrofony
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
