--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -616,6 +616,7 @@ MSG_ERROR_TITLE=Greska
 MSG_QUESTION_TITLE=Pitanje
 MSG_QUIT_USWP=Stvarno napustate UltraStar?
 MSG_END_PARTY=Stvarno napustate Timski Mod?
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nema ucitanih pesama
 ERROR_NO_PLUGINS=Nema ucitanih plugin-ova
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG=Pesma se ne moze ucitati.
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Играч %d додељује се вишеструким микрофонима\n\n Проверите опције микрофона
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микрофону\n\n Проверите опције микрофона
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=Ostalo
@@ -690,7 +693,7 @@ C_GRAPHICS=Grafika
 
 ;TODO: C_INFORMATION=Information
 ;TODO: C_INSERT_USER=Insert user
-;C_INTERNET=Интернет
+C_INTERNET=Интернет
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
@@ -731,6 +734,7 @@ C_MICROPHONES=Snimanje
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
