--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -616,6 +616,7 @@ MSG_INFO_TITLE=信息
 MSG_QUESTION_TITLE=确认
 MSG_QUIT_USWP=确定离开UltraStar？
 MSG_END_PARTY=确定离开派对模式？
+;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=未载入歌曲
 ERROR_NO_PLUGINS=未载入插件
@@ -628,7 +629,9 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=无法载入歌曲：行 %0:d 解析错误
 ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风\n\n请检查您的麦克风选项
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风\n\n请检查您的麦克风选项
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
 ;TODO: C_ABOUT=About...
 C_ADVANCED=高级
@@ -731,6 +734,7 @@ C_MICROPHONES=录音
 ;TODO: C_SING=Sing
 ;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
+;TODO: C_SONGDIRS=Folders
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
 ;TODO: C_SORT_SONGS=Sort songs
